--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="limiter">
-    <div class="container" style="background-image: url('images/img-01.jpg');">
+    <div class="container" style="background-image: url('img-01.jpg');">
         <div class="wrap">
         <form class="form validate-form">
             <div class="form-avatar">
