--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="wrap">
         <form class="form validate-form">
             <div class="form-avatar">
-                <img src="images/avatar.png" alt="AVATAR">
+                <img src="avatar.png" alt="AVATAR">
             </div>
             <span class="form-title">Have an account?</span>
             <div class="wrap-input validate-input" data-validate="Username is required">
